# NetDocGen

./: .env.example  .gitignore  .pre-commit-config.yaml  DEBUGGING_UPLOAD_ISSUES.md  README.md  RUN_TESTS.md  SETUP.md  claude.md  codecov.yml  debug.md  deploy-k8s.sh  docker-compose.prod.yml  docker-compose.yml  fix-docker.sh  init-ollama.sh  planning.md  prd.md  pycharm-setup-guide.md  pyproject.toml  requirements-dev.txt  start-docker.sh  stop-docker.sh  tasks.md  test_integration.py  troubleshooting.md
.github/: dependabot.yml
.github/workflows/: ci.yml  e2e-tests.yml  release.yml
api/: Dockerfile  alembic.ini  create_admin.py  create_test_user.py  init_templates.py  pytest.ini  requirements.txt  test_template_integration.py
api/alembic/: env.py
api/app/: config.py  database.py  dependencies.py  main.py  metrics.py
api/http-requests/: test.http
api/tests/: conftest.py  test_auth.py  test_collaboration.py  test_documents.py  test_integration.py  test_projects.py
docs/: API_REFERENCE.md  OPENAPI_SPEC.yaml  USER_GUIDE.md
frontend/: Dockerfile  Dockerfile.dev  cypress.config.ts  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/cypress/: tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.js
generator/: Dockerfile  pytest.ini  requirements.txt  test_generator.py
generator/src/: generator.py  main.py  utils.py
generator/tests/: __init__.py  test_generator.py
k8s/: README.md
k8s/base/: api.yaml  frontend.yaml  generator.yaml  (+9 more)
llm/: ollama_client.py
parser/: Dockerfile  README.md  requirements.txt
(+98 files in other folders)
