[tool.poetry]
name = "netdocgen"
version = "0.1.0"
description = "Network Documentation Generator"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=app --cov-report=html"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true